# pratter

./: .gitignore  .gitlab-ci.yml  .ocamlformat  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  dune  dune-project  pratter.ml  pratter.mli  pratter.opam  shell.nix
t/: dune  main.ml  simple.ml  terms.ml  uarithGram.mly  uarithLex.mll
