opam-version: "2.0"
version: "5.0.2"
synopsis: "A table-driven operator precedence parser"
description: """
Pratter is a top-down operator precedence parser that allows to
parse expressions with infix, prefix and postfix operators.
"""
maintainer: ["Gabriel Hondet"]
authors: ["Gabriel Hondet"]
license: "BSD-3-Clause"
homepage: "https://forge.tedomum.net/koizel/pratter"
bug-reports: "https://forge.tedomum.net/koizel/pratter/issues"
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.7"}
  # Release 1.5.0 of alcotest fixes interactions with the result library
  "alcotest" {with-test & >= "1.5.0" & < "2"}
  "qcheck" {with-test & >= "0.12" }
  "qcheck-alcotest" {with-test & >= "0.12"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://forge.tedomum.net/koizel/pratter"
